examples/negative/type_errors/L2/9_bool_limit_case.ob
MODULE BoolLimitCase;

VAR x,y: INTEGER;

BEGIN
  x := 0;
  CASE x OF
    0..19: y := 0
  | TRUE: y := 1
  END
END BoolLimitCase.
